# unigent

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  unigent
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
debian/: changelog  control  copyright  install  rules
src/unigent/: __init__.py  agent.py  automation.py  log_streamer.py  persistence.py  telegram_bot.py
tests/: test_enhancements.py
